--- a/freeagt.html
+++ b/freeagt.html
@@ -1,88 +1,102 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 450</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Case Keenum            </td><td><font size=3> 255</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Alex Smith             </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Eli Manning            </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Blake Bortles          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3> 800</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Case Keenum            </td><td><font size=3> 335</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Blake Bortles          </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 305</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Derek Carr             </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Alex Smith             </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Eli Manning            </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Nick Foles             </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Blaine Gabbert         </td><td><font size=3>  50</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Austin Ekeler          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>James White            </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Javorius Allen         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Anthony Sherman        </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>James White            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>TJ Yeldon              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Javorius Allen         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alex Armah             </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alfred Blue            </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Kenneth Dixon          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Corey Grant            </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Jalen Richard          </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Devontae Booker        </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>Kenny Stills           </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>John Brown             </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>Jakeem Grant           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Darius Jennings        </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Andre Roberts          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Randall Cobb           </td><td><font size=3> 195</td></tr>
-<tr><td><font size=3>Ted Ginn               </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>Geronimo Allison       </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Quincy Enunwa          </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Cooper Kupp            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Brandon Marshall       </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Phillip Dorsett        </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>John Brown             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Chris Godwin           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Willie Snead           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>Quincy Enunwa          </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Chris Godwin           </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Geronimo Allison       </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Tavon Austin           </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Ted Ginn               </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Will Fuller            </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Cooper Kupp            </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Tyler Boyd             </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Mike Williams          </td><td><font size=3> 115</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Jared Cook             </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jesse James            </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Antonio Gates          </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Eric Ebron             </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jesse James            </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Garrett Celek          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>AJ Derby               </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Michael Roberts        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tyler Higbee           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Austin Seferian-Jenkins</td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Virgil Green           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Josh Perkins           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Antonio Gates          </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Greg Olsen             </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 135</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 120</td></tr>
-<tr><td><font size=3>Ryan Succop            </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Caleb Sturgis          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Mike Nugent            </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Ryan Succop            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3> 195</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Mike Nugent            </td><td><font size=3> 140</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Caleb Sturgis          </td><td><font size=3> 115</td></tr>
+<tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 100</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Dante Pettis           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Will Dissly            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Will Dissly            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Dane Cruikshank        </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>Mark Andrews           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>KhaDarel Hodge         </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Greg Joseph            </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>David Marvin           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Matt McCrane           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Bo Scarbrough          </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Kaare Vedvik           </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
