--- a/roster.html
+++ b/roster.html
@@ -13,7 +13,6 @@
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
-<tr><td>MIN</td><td>Latavius Murray        </td></tr>
 <tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td>MIA</td><td>Frank Gore             </td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>MIN</td><td>Daniel Carlson         </td></tr>
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
+<tr><td>DAL</td><td>Michael Gallup         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -78,10 +78,10 @@
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>JAX</td><td>Keelan Cole            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
+<tr><td>PIT</td><td>Jesse James            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>BUF</td><td>Steven Hauschka        </td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
+<tr><td>MIN</td><td>Dan Bailey             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
@@ -187,12 +187,12 @@
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>NYJ</td><td>Bilal Powell           </td></tr>
 <tr><td>BUF</td><td>Chris Ivory            </td></tr>
+<tr><td> NE</td><td>James White            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>OAK</td><td>Amari Cooper           </td></tr>
 <tr><td>CAR</td><td>Devin Funchess         </td></tr>
 <tr><td> SF</td><td>Pierre Garcon          </td></tr>
-<tr><td>DAL</td><td>Allen Hurns            </td></tr>
 <tr><td>OAK</td><td>Jordy Nelson           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
@@ -214,6 +214,7 @@
 <tr><td>HOU</td><td>Lamar Miller           </td></tr>
 <tr><td> NO</td><td>Mark Ingram            </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
+<tr><td>MIN</td><td>Latavius Murray        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Antonio Brown          </td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
@@ -225,10 +226,9 @@
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Greg Zuerlein          </td></tr>
+<tr><td>DEN</td><td>Brandon McManus        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
-<tr><td>DAL</td><td>Michael Gallup         </td></tr>
-<tr><td>OAK</td><td>Eddy Pineiro           </td></tr>
 <tr><td>CLE</td><td>Antonio Callaway       </td></tr>
 </table>
 </td>
@@ -250,7 +250,6 @@
 <tr><td>NYJ</td><td>Robby Anderson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>IND</td><td>Jack Doyle             </td></tr>
-<tr><td>WAS</td><td>Vernon Davis           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -258,6 +257,7 @@
 <tr><td>MIA</td><td>Kalen Ballage          </td></tr>
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td> SF</td><td>Dante Pettis           </td></tr>
+<tr><td>CLE</td><td>Greg Joseph            </td></tr>
 </table>
 </td>
 </tr>
@@ -266,6 +266,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (10)</b></font></td></tr>
 <tr><td>LAC</td><td>Philip Rivers          </td></tr>
+<tr><td> TB</td><td>Ryan Fitzpatrick       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CIN</td><td>Joe Mixon              </td></tr>
 <tr><td>BUF</td><td>LeSean McCoy           </td></tr>
@@ -287,7 +288,6 @@
 <tr><td>NYJ</td><td>Sam Darnold            </td></tr>
 <tr><td>SEA</td><td>Rashaad Penny          </td></tr>
 <tr><td>CLE</td><td>Baker Mayfield         </td></tr>
-<tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 </table>
 </td>
 <td>
