--- a/pickups.html
+++ b/pickups.html
@@ -70,8 +70,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Jesse James/Ricky Seals-Jones</td>
+<td width=50>9/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dan Bailey/Steven Hauschka</td>
+<td width=50>9/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -198,8 +198,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>James White/Allen Hurns</td>
+<td width=50>9/20</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -267,15 +267,15 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ryan Fitzpatrick/Courtland Sutton</td>
+<td width=50>9/23</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Greg Joseph/Vernon Davis</td>
+<td width=50>9/18</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -333,11 +333,17 @@ Team 1  - James Conner/Bo Scarbrough (9/4)<br>
 Team 4  - Jared Cook/David Marvin (9/11)<br>
 Team 10 - Randall Cobb/Kaare Vedvik (9/11)<br>
 Team 6  - TJ Yeldon/KhaDarel Hodge (9/11)<br>
-Team 8  - Kenny Stills/Jerick McKinnon (9/12)
+Team 8  - Kenny Stills/Jerick McKinnon (9/12)<br>
+Team 8  - Brandon McManus/Eddy Piniero (9/18)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
 Team 6  - Alvin Kamara<br>
 Team 10 - Sam Darnold
+</td></tr>
+<tr><td width=50>9/23</td>
+<td width=500>
+Team 1  - Michael Gallup<br>
+Team 8  - Latavius Murray
 </td></tr>
 </table>
