--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
 <a href="week2.html"><b>2</b></a>
-<a href="week3.html"><b>3</b></a><br>
+<a href="week3.html"><b>3</b></a>
+<a href="week4.html"><b>4</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -61,43 +62,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>2445</font></td>
-    <td><font size=2>1815</font></td>
+    <td><font size=2>3110</font></td>
+    <td><font size=2>2405</font></td>
     <td><font size=2>960</font></td>
     <td><font size=2>615</font></td>
     <td><font size=2>1</font></td></tr>
+<tr><td><font size=2>Roger(3)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2710</font></td>
+    <td><font size=2>2635</font></td>
+    <td><font size=2>880</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(5)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1980</font></td>
-    <td><font size=2>1680</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2445</font></td>
+    <td><font size=2>2205</font></td>
     <td><font size=2>995</font></td>
     <td><font size=2>375</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Mike(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1675</font></td>
-    <td><font size=2>1720</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2265</font></td>
+    <td><font size=2>2750</font></td>
     <td><font size=2>590</font></td>
     <td><font size=2>535</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Roger(3)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1830</font></td>
-    <td><font size=2>1820</font></td>
-    <td><font size=2>785</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>1240</font></td>
-    <td><font size=2>1725</font></td>
-    <td><font size=2>475</font></td>
+    <td><font size=2>1765</font></td>
+    <td><font size=2>2190</font></td>
+    <td><font size=2>525</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
@@ -108,43 +109,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
+<tr><td><font size=2>Grant(6)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3095</font></td>
+    <td><font size=2>2675</font></td>
+    <td><font size=2>1345</font></td>
+    <td><font size=2>535</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Sam(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2220</font></td>
-    <td><font size=2>1485</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3035</font></td>
+    <td><font size=2>2365</font></td>
     <td><font size=2>815</font></td>
     <td><font size=2>650</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
+<tr><td><font size=2>Matthew(4)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1750</font></td>
-    <td><font size=2>2070</font></td>
-    <td><font size=2>610</font></td>
-    <td><font size=2>535</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2750</font></td>
+    <td><font size=2>2180</font></td>
+    <td><font size=2>1030</font></td>
+    <td><font size=2>345</font></td>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Randy(8)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1980</font></td>
-    <td><font size=2>2310</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2570</font></td>
+    <td><font size=2>2975</font></td>
     <td><font size=2>1030</font></td>
     <td><font size=2>335</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1720</font></td>
-    <td><font size=2>1590</font></td>
-    <td><font size=2>770</font></td>
-    <td><font size=2>345</font></td>
-    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1770</font></td>
-    <td><font size=2>2395</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2375</font></td>
+    <td><font size=2>3740</font></td>
     <td><font size=2>725</font></td>
     <td><font size=2>520</font></td>
     <td><font size=2>0</font></td></tr>
