--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Matt McCrane/Dak Prescott</td>
+<td width=50>9/26</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -94,8 +94,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Ricky Seals-Jones/Jesse James</td>
+<td width=50>9/26</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -106,8 +106,8 @@
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Will Dissly/Tre'Quan Smith</td>
+<td width=50>9/26</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -151,8 +151,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Cooper Kupp/James Washington</td>
+<td width=50>9/27</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -334,7 +334,8 @@ Team 4  - Jared Cook/David Marvin (9/11)<br>
 Team 10 - Randall Cobb/Kaare Vedvik (9/11)<br>
 Team 6  - TJ Yeldon/KhaDarel Hodge (9/11)<br>
 Team 8  - Kenny Stills/Jerick McKinnon (9/12)<br>
-Team 8  - Brandon McManus/Eddy Piniero (9/18)
+Team 8  - Brandon McManus/Eddy Piniero (9/18)<br>
+Team 9  - Javorius Allen/Rex Burkhead (9/30)
 </td></tr>
 <tr><td width=50>8/28</td>
 <td width=500>
@@ -345,5 +346,10 @@ Team 10 - Sam Darnold
 <td width=500>
 Team 1  - Michael Gallup<br>
 Team 8  - Latavius Murray
+</td></tr>
+<tr><td width=50>9/27</td>
+<td width=500>
+Team 6  - Kyle Rudolph<br>
+Team 7  - TJ Yeldon
 </td></tr>
 </table>
