--- a/roster.html
+++ b/roster.html
@@ -8,7 +8,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>States (1)</b></font></td></tr>
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
-<tr><td>DAL</td><td>Dak Prescott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td>ATL</td><td>Tevin Coleman          </td></tr>
@@ -30,6 +29,7 @@
 <tr><td>LAR</td><td>John Kelly             </td></tr>
 <tr><td>BAL</td><td>Hayden Hurst           </td></tr>
 <tr><td>DAL</td><td>Michael Gallup         </td></tr>
+<tr><td>OAK</td><td>Matt McCrane           </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -78,14 +78,14 @@
 <tr><td>DET</td><td>Kenny Golladay         </td></tr>
 <tr><td>JAX</td><td>Keelan Cole            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>PIT</td><td>Jesse James            </td></tr>
+<tr><td>ARI</td><td>Ricky Seals-Jones      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Wil Lutz               </td></tr>
 <tr><td>MIN</td><td>Dan Bailey             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
-<tr><td> NO</td><td>Tre'Quan Smith         </td></tr>
+<tr><td>SEA</td><td>Will Dissly            </td></tr>
 </table>
 </td>
 </tr>
@@ -156,7 +156,6 @@
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> TB</td><td>Peyton Barber          </td></tr>
 <tr><td> SF</td><td>Matt Breida            </td></tr>
-<tr><td>JAX</td><td>TJ Yeldon              </td></tr>
 <tr><td>LAC</td><td>Austin Ekeler          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
@@ -164,14 +163,15 @@
 <tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td>NYG</td><td>Sterling Shepard       </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
+<tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Jordan Reed            </td></tr>
+<tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DET</td><td>Kerryon Johnson        </td></tr>
 <tr><td>IND</td><td>Jordan Wilkins         </td></tr>
-<tr><td>PIT</td><td>James Washington       </td></tr>
 </table>
 </td>
 </tr>
@@ -188,6 +188,7 @@
 <tr><td>NYJ</td><td>Bilal Powell           </td></tr>
 <tr><td>BUF</td><td>Chris Ivory            </td></tr>
 <tr><td> NE</td><td>James White            </td></tr>
+<tr><td>JAX</td><td>TJ Yeldon              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Davante Adams          </td></tr>
 <tr><td>OAK</td><td>Amari Cooper           </td></tr>
@@ -195,7 +196,6 @@
 <tr><td> SF</td><td>Pierre Garcon          </td></tr>
 <tr><td>OAK</td><td>Jordy Nelson           </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>MIN</td><td>Kyle Rudolph           </td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
@@ -241,8 +241,8 @@
 <tr><td> KC</td><td>Kareem Hunt            </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>TEN</td><td>Dion Lewis             </td></tr>
-<tr><td> NE</td><td>Rex Burkhead           </td></tr>
 <tr><td> SF</td><td>Alfred Morris          </td></tr>
+<tr><td>BAL</td><td>Javorius Allen         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>DeAndre Hopkins        </td></tr>
 <tr><td>SEA</td><td>Doug Baldwin           </td></tr>
