--- a/thousand.html
+++ b/thousand.html
@@ -21,12 +21,6 @@
     <td>1480</td>
     <td>Mike</td>
     <td>165</td></tr>
-<tr><td>2013</td>
-    <td>Week 14</td>
-    <td>Grant Mydland</td>
-    <td>1460</td>
-    <td>Matthew</td>
-    <td>1025</td></tr>
 <tr><td>2011</td>
     <td>Week 5</td>
     <td>Rich Fleck</td>
@@ -45,6 +39,12 @@
     <td>1345</td>
     <td>Matthew</td>
     <td>480</td></tr>
+<tr><td>2018</td>
+    <td>Week 4</td>
+    <td>Grant Mydland</td>
+    <td>1345</td>
+    <td>Rich</td>
+    <td>605</td></tr>
 <tr><td>2016</td>
     <td>Week 12</td>
     <td>Randy Edwards</td>
@@ -693,6 +693,12 @@
     <td>1030</td>
     <td>Rich</td>
     <td>725</td></tr>
+<tr><td>2018</td>
+    <td>Week 4</td>
+    <td>Matthew Edwards</td>
+    <td>1030</td>
+    <td>Mike</td>
+    <td>590</td></tr>
 <tr><td>2003</td>
     <td>Week 13</td>
     <td>Rich Fleck</td>
